Remove Telegram config/notifications

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,4 @@ GRVT_LANG=en
 # Account 1 and 2 sessions are created via QR login and stored under `session/grvt_browser_state_1.json`
 # and `session/grvt_browser_state_2.json`.
 
-# Telegram notifications (optional)
-TELEGRAM_BOT_TOKEN=your_bot_token_here
-TELEGRAM_CHAT_ID=your_chat_id_here
+# Telegram notifications were removed.
