Reduce default signature expiration to avoid max-expiration rejects

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,14 @@ GRVT_LANG=en
 # GRVT_WS_URL=
 # GRVT_EDGE_URL=
 
+# Debug / signing
+# Optional: enable extra stderr logging
+# GRVT_DEBUG=1
+# Optional: signature expiration (seconds). Docs cap this at 30 days.
+# If you see "exceeded max signature expiration", first verify your system clock is correct,
+# then optionally lower this value (default: 6h).
+# GRVT_SIGNATURE_EXPIRATION_SEC=21600
+
 # Accounts
 # No account IDs/keys are required in .env.
 # Account 1 and 2 sessions are created via QR login and stored under `session/grvt_browser_state_1.json`
