--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 python-dotenv>=1.0.0
 requests>=2.31.0
 websockets>=12.0
+truststore>=0.9.0
 playwright>=1.41.0
 playwright-stealth>=1.0.6
 eth-account>=0.10.0
